Final Project Update
Updated the pages for the final presentation including the addition of
new images for the movie matchup overlay.

--- a/index.html
+++ b/index.html
@@ -77,13 +77,14 @@
     <header>
         <h1>Make your choice of what movie to watch so much simpler</h1>
         <a href="list.html" id="hButton">Get Started</a>
-        <img src="img/Example.png" height="400" width="800" id="hImg">
+        <img src="img/Example.png" height="400" width="800" id="hImg" alt="Example">
     </header>
-    <div id="contain">
-        <img id="logo" src="img/logo.png" height="100" width="200">
-    </div>
-    <div class="content">
-        <h2> <b>Welcome to MovieBracket!</b></h2><p>Do you have a list of movies to watch and you are also incredibly indecisive? You came to the right place! MovieBracket makes this decision for you by making a bracket off of your list and allowing you to easily see reviews and trailers for the randomly paired movies you want to watch. You can click on the voting counters for each person who votes on the movie and click done to progress. Let's get started!</p>
+    <div class="content" style="padding: 0;">
+        <div id="contain">
+            <img id="logo" src="img/logo.png" height="100" width="200"><br><br><br>
+        </div>
+        <h2> <b>Welcome to MovieBracket!</b></h2>
+        <p>Do you have a list of movies to watch and you are also incredibly indecisive? You came to the right place! MovieBracket makes this decision for you by making a bracket off of your list and allowing you to easily see reviews and trailers for the randomly paired movies you want to watch. You can click on the voting counters for each person who votes on the movie and click done to progress. Let's get started!</p>
         <h2>Sign-Up!</h2>
         <p>Signing up for MovieBracket gives you the opportunity to save your previous brackets so you can remember how you came to the winning movie. It doesn't end there though! Just because you found a winner doesn't mean you should forget about the rest of the movies you chose! Grab the links for your second or third choice movie as well because they made it that far too!</p>
         <a href="login.html" class="link">Sign-Up</a>
@@ -94,15 +95,6 @@
             <p class="block"><img src="img/Very-Basic-Idea-icon.png" height="40px" width="40px"><b style="font-size: 20px">The Idea</b><br>I plan on designing this using some advanced CSS to make the bracket look pretty and functional. Links in the future will link to the actual winner.</p>
             <p class="block"><img src="img/Programming-Edit-Property-icon.png" height="40px" width="40px"><b style="font-size: 20px">Sign-Up!</b><br>Go ahead, sign up for our service! It's free! If you make an account on here you have the added benefit of your previous brackets and options being saved for future reference.</p>
         </div>
-
-    </div>
-    <!-- Styled on HTML strictly because it is specific to this element alone on each page. TODO: add CSS style for this particular element -->
-    <div style="position: static">
-        <p style="position: relative; bottom: 0; width:100%; text-align: center; float: left">
-            <a href="http://validator.w3.org/check?uri=http://www.tcnj.edu/~stysk1/index.html" style="display:inline-block">
-                <img src="http://www.w3.org/Icons/valid-xhtml10" height="31" width="88" alt="Valid XHTML 1.0!" />
-            </a>
-        </p>
     </div>
 </body>
 </html>
