--- a/links.html
+++ b/links.html
@@ -31,7 +31,7 @@
     <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
         <a href="mailto:kstys97@gmail.com">Contact</a>
-        <a href="list.html">Build New List</a>
+        <a href="list.html">START BUILDING</a>
         <div class="dropdown">
             <p id="accText">Have an account?</p>
             <button onclick="showMenuDesktop();" class="dropButton">Log in</button>
@@ -62,8 +62,8 @@
         </div>
     </div>
     <div class="content">
-        <h1>Links!</h1>
-        <p>This is where a bunch of links for the final movie would be displayed.</p>
+        <h1>Links</h1>
+        <p>Here are your generated links using popular media streaming sites:</p>
         <ul>
             <li><a href="http://netflix.com" class="link" id="netflix">NETFLIX</a></li>
             <li><a href="http://amazon.com" class="link" id="amazon">AMAZON</a></li>
@@ -76,13 +76,12 @@
         <ul>
             <a href="login.html" class="link">Sign-Up</a>
         </ul>
-    </div>
-    <div style="position: static">
-        <p style="position: relative; bottom: 0; width:100%; text-align: center; float: left">
-            <a href="http://validator.w3.org/check?uri=http://www.tcnj.edu/~stysk1/links.html" style="display:inline-block">
-                <img src="http://www.w3.org/Icons/valid-xhtml10" height="31" width="88" alt="Valid XHTML 1.0!" />
-            </a>
-        </p>
+        <br>
+        <h2>More Brackets?</h2>
+        <p>Click the link below to make another movie bracket</p>
+        <ul>
+            <a href="list.html" class="link">Build New Bracket</a>
+        </ul>
     </div>
 </body>
 </html>
