--- a/list.html
+++ b/list.html
@@ -68,6 +68,7 @@
     <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
         <a href="mailto:kstys97@gmail.com">Contact</a>
+        <a href="list.html" class="active">START BUILDING</a>
         <div class="dropdown">
             <p id="accText">Have an account?</p>
             <button onclick="showMenuDesktop();" class="dropButton">Log in</button>
@@ -127,14 +128,6 @@
                 </ul>
             </form>
         </div>
-    </div>
-    <!-- Styled on HTML strictly because it is specific to this element alone on each page. TODO: add CSS style for this particular element -->
-    <div style="position: static">
-        <p style="position: relative; bottom: 0; width:100%; text-align: center; float: left">
-            <a href="http://validator.w3.org/check?uri=http://www.tcnj.edu/~stysk1/bracket.html" style="display:inline-block">
-                <img src="http://www.w3.org/Icons/valid-xhtml10" height="31" width="88" alt="Valid XHTML 1.0!" />
-            </a>
-        </p>
     </div>
 </body>
 
